# biblioteca

./: Dockerfile  README.md  app.py  docker-compose-dev.yml  docker-compose-prod.yml  environment.yml  gunicorn.service  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yaml
alembic/: env.py
alembic/versions/: 44b68e52c715_auto_rate.py  6746f7bb4094_add_author_summary_and_year_to_books_.py  c103426a7d0b_add_foreign_key_to_books_table.py  dc2ceb1523df_create_books_table.py  ec80a04d246e_add_user_table.py
app/: database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  book.py  rating.py  user.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_books.py  test_ratings.py  test_users.py
