[tool.poetry]
name = "biblioteca"
version = "0.1.0"
description = "An API interface for interacting with a book database."
authors = ["Jordan Karapanagiotis <jordan.krp.93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
alembic = "^1.13.1"
bcrypt = "^3.2.0"
fastapi = "^0.68.0"
gunicorn = "^21.2.0"
httptools = "^0.6.1"
marshmallow = "^3.20.1"
marshmallow-sqlalchemy = "^0.29.0"
numpy = "^1.26.4"
pydantic = "^1.10.13"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
PyYAML = "^6.0.1"
SQLAlchemy = "^2.0.23"
uvicorn = "^0.13.4"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
aiofiles = "^24.1.0"

[tool.poetry.dev-dependencies]
pytest="^7.4.2"
pytest-random-order="^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
